name:                   codec-jvm
version:                0.1
license:                Apache-2.0
license-file:           LICENSE
author:                 Alois Cochard
maintainer:             alois.cochard@gmail.com
copyright:              Copyright (c) 2015 Alois Cochard
                                  (c) 2016-2017 Rahul Muttineni
category:               Development
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-do-bind
  exposed-modules:
    Codec.JVM
    Codec.JVM.ASM
    Codec.JVM.ASM.Code
    Codec.JVM.ASM.Code.CtrlFlow
    Codec.JVM.ASM.Code.Instr
    Codec.JVM.ASM.Code.Types
    Codec.JVM.Attr
    Codec.JVM.Class
    Codec.JVM.Parse
    Codec.JVM.Const
    Codec.JVM.ConstPool
    Codec.JVM.Encoding
    Codec.JVM.Field
    Codec.JVM.Internal
    Codec.JVM.Method
    Codec.JVM.Opcode
    Codec.JVM.Types

  -- See https://ghc.haskell.org/trac/ghc/wiki/Migration/8.0#base-4.9.0.0
  if impl(ghc >= 8.0)
    ghc-options:  -Wno-redundant-constraints -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances

  build-depends:
      base                >= 4.6.0.1    && < 5
    , binary              >= 0.7        && < 0.9
    , bytestring          >= 0.10       && < 0.11
    , containers          >= 0.5        && < 0.6
    , text                >= 1.2        && < 1.3
    , stringsearch
    , mtl
    , array
    , transformers

  if !impl(ghc >= 8)
    build-depends:     semigroups                      >= 0.10 && < 0.19
                     , fail == 4.9.*

executable example
    hs-source-dirs:      example
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , text
                       , codec-jvm
                       , containers
